--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,18 +4,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:gravity="center"
+    android:orientation="vertical"
     tools:context=".MainActivity">
+
+    <Spinner
+        android:id="@+id/currencySpinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="5dp"
+        android:spinnerMode="dropdown"
+        android:entries="@array/currencies" />
+
+    <EditText
+        android:id="@+id/amount"
+        android:layout_width="200dp"
+        android:layout_height="40dp"
+        android:hint="@string/amount"
+        android:text="@string/_10"
+        />
+
+    <EditText
+        android:id="@+id/description"
+        android:layout_width="200dp"
+        android:layout_height="40dp"
+        android:layout_marginBottom="15dp"
+        android:hint="@string/description"
+        android:text="@string/test"
+        />
 
     <com.revolut.revolutpay.ui.button.RevolutPayButton
         android:id="@+id/revolut_pay_button"
-        android:layout_width="wrap_content"
-        android:layout_height="34dp"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
         app:revolutPay_BoxText="GetCashbackValue"
         app:revolutPay_BoxTextCurrency="GBP"
         app:revolutPay_BoxTextValue="Medium"
-        app:revolutPay_Radius="Medium"
+        app:revolutPay_Radius="Large"
         app:revolutPay_Size="Large"
         app:revolutPay_VariantDarkTheme="Dark"
         app:revolutPay_VariantLightTheme="Light" />
@@ -24,12 +50,12 @@
         android:id="@+id/pay_stripe"
         android:layout_width="200dp"
         android:layout_height="50dp"
-        android:text="Pay with Stripe" />
+        android:text="@string/pay_with_stripe" />
 
     <Button
         android:id="@+id/pay_hp"
         android:layout_width="200dp"
         android:layout_height="50dp"
-        android:text="Pay with Handpoint" />
+        android:text="@string/pay_with_handpoint" />
 
 </LinearLayout>
