--- a/app/src/main/res/layout/activity_start_screen.xml
+++ b/app/src/main/res/layout/activity_start_screen.xml
@@ -1,9 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
+    android:background="@color/grey_custom"
+    android:gravity="left"
+    android:orientation="vertical"
     tools:context=".StartScreenActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:src="@drawable/back_button"
+        android:id="@+id/back_button"
+        />
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+
+    android:background="@color/grey_custom"
+    android:gravity="center"
+    android:orientation="vertical"
+    tools:context=".StartScreenActivity">
+
+
+    <ImageView
+        android:padding="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
+        android:src="@drawable/create_payment"
+        android:id="@+id/create_payment"
+        />
+
+    <ImageView
+        android:padding="10dp"
+
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
+        android:src="@drawable/merchant_key"
+        android:id="@+id/merchant_key"
+        />
+
+</LinearLayout>
+    </LinearLayout>
