added encryption, merchant key change

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="colorPrimary">#f7f6f2</color>
     <color name="colorOfStatusBar">#1e1e1e</color>
     <color name="colorAccent">#f7f6f2</color>
+    <color name="red">#FF0000</color>
 
 </resources>
