--- a/app/src/main/res/layout/activity_merchant_key_screen.xml
+++ b/app/src/main/res/layout/activity_merchant_key_screen.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,19 +8,20 @@
     android:background="@color/grey_custom"
     android:orientation="vertical"
     tools:context=".MainActivity">
+
     <ImageView
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="20dp"
+        android:id="@+id/back_button_merchant"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:src="@drawable/back_button"
-        android:id="@+id/back_button_merchant"
-        />
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/back_button" />
+
     <TextView
-        android:layout_marginStart="100dp"
         android:id="@+id/text_view_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="100dp"
         android:layout_marginTop="35dp"
         android:layout_marginEnd="50dp"
         android:layout_marginBottom="50dp"
@@ -31,9 +31,9 @@
         android:textStyle="bold" />
 
     <LinearLayout
-        android:layout_marginTop="150dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="120dp"
 
         android:background="@color/grey_custom"
         android:gravity="top|center"
@@ -41,25 +41,43 @@
         tools:context=".MainActivity">
 
 
-        <TextView
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="350dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="123dp"
+            android:layout_gravity="center_horizontal"
             android:layout_marginBottom="5dp"
-            android:text="Current key"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:text="Current key"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/deleteKeyButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:clickable="true"
+                android:text="@string/delete_key"
+                android:textColor="@color/red"
+                android:textSize="20sp"
+                android:focusable="true" />
+        </RelativeLayout>
 
         <TextView
-            android:id="@+id/amount"
+            android:id="@+id/current_key"
             android:layout_width="350dp"
             android:layout_height="70dp"
             android:layout_marginEnd="0dp"
             android:layout_marginBottom="20dp"
             android:background="@drawable/et_cust"
-            android:textSize="20dp"
-            android:text="@string/REVOLUT_MERCHANT_API_KEY" />
+            android:textSize="20dp" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -68,19 +86,31 @@
             android:text="Select a new key"
             android:textColor="@color/black"
             android:textSize="20sp"
-            android:textStyle="bold"
-            />
+            android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/select_key"
-            android:paddingLeft="10dp"
+        <LinearLayout
+            android:id="@+id/select_key_button"
             android:layout_width="350dp"
             android:layout_height="70dp"
             android:layout_marginBottom="15dp"
             android:background="@drawable/et_cust"
-            android:textSize="20dp"
-            android:hint="Select a new key from the database"
-            android:paddingTop="5dp" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/select_key"
+                android:layout_width="290dp"
+                android:layout_height="match_parent"
+                android:hint="@string/select_a_new_key"
+                android:gravity="center_vertical"
+                android:textSize="20dp" />
+
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="match_parent"
+                android:src="@drawable/arrow_high_res" />
+        </LinearLayout>
+
+
 
         <TextView
             android:layout_width="wrap_content"
@@ -90,49 +120,58 @@
             android:text="Manually enter a new key"
             android:textColor="@color/black"
             android:textSize="20sp"
-            android:textStyle="bold"
-            />
+            android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/enter_new_key"
+            android:id="@+id/new_key_public"
             android:layout_width="350dp"
             android:layout_height="70dp"
             android:layout_marginEnd="0dp"
             android:layout_marginBottom="15dp"
             android:background="@drawable/et_cust"
             android:gravity="left"
-            android:hint=""
+            android:hint="Public key"
+            android:paddingTop="5dp" />
+
+        <EditText
+            android:id="@+id/new_key_secret"
+            android:layout_width="350dp"
+            android:layout_height="70dp"
+            android:layout_marginEnd="0dp"
+            android:layout_marginBottom="15dp"
+            android:background="@drawable/et_cust"
+            android:gravity="left"
+            android:hint="Secret key"
             android:paddingTop="5dp" />
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center|bottom"
-            >
+            android:gravity="center|bottom">
+
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/cancel_button"
-                android:layout_marginRight="5dp"
                 android:layout_width="172dp"
                 android:layout_height="50dp"
                 android:layout_gravity="bottom"
+                android:layout_marginRight="5dp"
                 android:layout_marginBottom="20dp"
                 android:background="@drawable/white_button"
                 android:text="Cancel"
                 android:textAllCaps="false"
                 android:textColor="@color/black"
-                android:textSize="22dp"
-                />
+                android:textSize="22dp" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/continue_button"
-                android:layout_marginLeft="5dp"
                 android:layout_width="172dp"
                 android:layout_height="50dp"
                 android:layout_gravity="bottom"
+                android:layout_marginLeft="5dp"
                 android:layout_marginBottom="20dp"
                 android:background="@drawable/black_button"
-                android:text="Continue"
+                android:text="Add key"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:textSize="22dp" />
