--- a/app/src/main/res/layout/activity_merchant_key_screen.xml
+++ b/app/src/main/res/layout/activity_merchant_key_screen.xml
@@ -14,7 +14,7 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="0dp"
         android:src="@drawable/back_button" />
 
     <TextView
@@ -22,10 +22,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="0dp"
         android:layout_marginEnd="50dp"
         android:layout_marginBottom="50dp"
-        android:text="Merchant key change"
+        android:text="Merchant key
+        change"
         android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold" />
@@ -72,7 +73,7 @@
         <TextView
             android:id="@+id/current_key"
             android:layout_width="350dp"
-            android:layout_height="70dp"
+            android:layout_height="50dp"
             android:layout_marginEnd="0dp"
             android:layout_marginBottom="20dp"
             android:background="@drawable/et_cust"
@@ -91,7 +92,7 @@
         <LinearLayout
             android:id="@+id/select_key_button"
             android:layout_width="350dp"
-            android:layout_height="70dp"
+            android:layout_height="50dp"
             android:layout_marginBottom="15dp"
             android:background="@drawable/et_cust"
             android:orientation="horizontal">
@@ -125,7 +126,7 @@
         <EditText
             android:id="@+id/new_key_public"
             android:layout_width="350dp"
-            android:layout_height="70dp"
+            android:layout_height="50dp"
             android:layout_marginEnd="0dp"
             android:layout_marginBottom="15dp"
             android:background="@drawable/et_cust"
@@ -136,7 +137,7 @@
         <EditText
             android:id="@+id/new_key_secret"
             android:layout_width="350dp"
-            android:layout_height="70dp"
+            android:layout_height="50dp"
             android:layout_marginEnd="0dp"
             android:layout_marginBottom="15dp"
             android:background="@drawable/et_cust"
